
PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-2827: Unwrap exception swallowing in TOP (haitao.yao via jcoveney)

PIG-2825: StoreFunc signature setting in LogicalPlan broken (jcoveney)

PIG-2815: class loader management in PigContext (rangadi via jcoveney)

PIG-2813: Fix test regressions from PIG-2632 (jcoveney)

PIG-2806: Fix merge join test regression from PIG-2632 (jcoveney)

PIG-2809: TestUDFContext broken by PIG-2699 (julienledem via daijy)

PIG-2807: TestParser TestPigStorage TestNewPlanOperatorPlan broken by PIG-2699 (julienledem via daijy)

PIG-2782: Specifying sorting field(s) at nightly.conf (cheolsoo via daijy)

PIG-2790: After Pig-2699 the script schema (LOAD ... USING ... AS {script schema}) is passed after getSchema is called (daijy)

PIG-2777: Docs are broken due to malformed xml after PIG-2673 (dvryaboy)

PIG-2593: Filter by a boolean value does not work (jay23jack via daijy)

PIG-2665: Bundled Jython jar in Pig 0.10.0-RC breaks module import in Python scripts with embedded Pig Latin (daijy)

PIG-2736: Support implicit cast from bytearray to boolean (jay23jack via daijy)

PIG-2508: PIG can unpredictably ignore deprecated Hadoop config options (thw via dvryaboy)

PIG-2691: Duplicate TOKENIZE schema (jay23jack via azaroth)

PIG-2173: piggybank datetime conversion javadocs not properly formatted (hluu via daijy)

PIG-2709: PigAvroRecordReader should specify which file has a problem when throwing IOException (mpercy via daijy)

PIG-2640: Usage message gives wrong information for Pig additional jars (prkommireddi via daijy)

PIG-2652:  Skew join and order by don't trigger reducer estimation (dvryaboy)
